# inlaw

./: README.md  pyproject.toml
AI_Instruction/: UsingInlaw.md  initial_design.md
src/: __init__.py  cli.py  dbtable.py  inlaw.py
